# PlantsVsZombiesHacker

./: Readme.md  readme
Doc/CT表/: PlantsVsZombies.CT
Doc/攻击指引/: 提示.txt
PlantsVsZombies/: Configure.cpp  Configure.h  PlantsVsZombies.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h
PlantsVsZombies/src/: style.qss
PlantsVsZombiesFunc/: CMakeLists.txt  cheatfunc.cpp  cheatfunc.h  main.cpp  plantsvszombiesfunc.h
Src/Code/PlantsVsZombies/: Configure.h  PlantsVsZombies.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h
Src/Code/PlantsVsZombies/.qtc_clangd/: compile_commands.json
Src/Code/PlantsVsZombies/.qtc_clangd/.cache/clangd/index/: Configure.cpp.FFDD99CBC02F1DBD.idx  Configure.h.C259C37CF97A6889.idx  QSlider.DBABB28CDA1DBF85.idx  __msvc_ostream.hpp.0CC731B17D4DCC06.idx  filesystem.71D52057B53C0446.idx  iomanip.5E58DEA62ED15C4A.idx  ios.1830B6701B663E94.idx  (+84 more)
Src/Code/PlantsVsZombiesFunc/: PlantsVsZombies.cpp  PlantsVsZombies.h  PlantsVsZombiesFunc.sln  PlantsVsZombiesFunc.vcxproj  PlantsVsZombiesFunc.vcxproj.filters  dllmain.cpp  plantsvszombiesfunc.cpp
Src/Code/PlantsVsZombiesFunc/PlantsVs.4955c5cd/Release/: PlantsVsZombiesFunc.dll.recipe  PlantsVsZombiesFunc.iobj  PlantsVsZombiesFunc.ipdb
Src/Code/PlantsVsZombiesFunc/PlantsVs.4955c5cd/Release/PlantsVs.4955c5cd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PlantsVsZombiesFunc.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Src/Code/PlantsVsZombiesFunc/lib/: detours.lib
